@startuml
top to bottom direction

!theme mirco from .

class User {
  ...
}

class Location {
  ...
}
class Host {
  ...
}
class SoftwareConnection {
  ...
}

class Server  {
  host_id
  name: string
  uid: string
  description: text
  api_url: string
  api_user: string
  api_password_ciphertext: text
  api_user_has_full_access: boolean
  api_verify_ssl: boolean
  properties: jsonb
  last_channel_update: timestamp
  last_check: timestamp
  last_check_ok: timestamp
  condition: integer
  condition_message: string
  manual_update: boolean
  disabled: boolean
  acknowledge_id: bigint
}

class Channel {
  uid: string
  properties: jsonb
  enabled: boolean
  condition: integer
  condition_message: string
  acknowledge_id: bigint
  state: string
}

class ChannelStatistic {
  server_id
  channel_id
  server_uid: string
  channel_uid: string
  meta_data_id: integer
  name: string
  state: string
  status_type: string
  received: integer
  sent: integer
  error: integer
  filtered: integer
  queued: integer
  last_condition_change: timestamp
  last_message_received_at: timestamp
  last_message_sent_at: timestamp
  last_message_error_at: timestamp
  condition: integer
  condition_message: string
  acknowledge_id: bigint
}

class ChannelStatisticGroup {
  name: string
}

class ChannelCounter {
  channel_id
  server_id
  channel_statistic_id
  meta_data_id: integer
  received: integer
  sent: integer
  error: integer
  filtered: integer
  queued: integer
}

class Alert {
  channel_id
  server_id
  channel_statistic_id
  type: string : alert, recovery
  message: text
}

class Note {
  notable: polymorpic
  message: rich_text
  valid_until: datetime
  channel_id
  server_id
  channel_statistic_id
  user_id
  type: string
}

class ServerConfiguration {
  server_id
  comment: string
  # has_one_attached :file
}

class EscalationLevel {
  escalatable: polymorphic
  attrib: string
  min_critical: integer
  min_warning: integer
  max_warning: integer
  max_critical: integer
  show_on_dashboard: boolean
  notification_group_id
}

class EscalationTime {
  escalation_level_id
  start_time: string, limit: 5
  end_time: string, limit: 5
  weekdays: integer, array:true
}

class NotificationGroup {
  name: string
}

Location "1" -- "*" Host
Host "1" -- "*" Server
SoftwareConnection "*" -- "1" "Server"
Server "1" -- "*" Channel
Server "1" - "*" ServerConfiguration
Server "1" - "*" ChannelStatistic
Channel "1" - "*" ChannelStatistic
ChannelCounter "*" - "1" Server
ChannelCounter "*" -- "1" Channel
ChannelCounter "*" -- "1" ChannelStatistic
Server "1" -- "*" Alert
Channel "0..1" -- "*" Alert
ChannelStatistic "0..1" -- "*" Alert
Server "1" -- "*" Note
Channel "0..1" -- "*" Note
ChannelStatistic "0..1" -- "*" Note
ChannelStatistic "*" - "*" ChannelStatisticGroup
ChannelStatistic "0..1" -- "*" EscalationLevel
ChannelStatisticGroup "0..1" -- "*" EscalationLevel
NotificationGroup "0..1" -- "*" EscalationLevel
EscalationLevel "0..1" -- "*" EscalationTime
User "*" -- "*" NotificationGroup

@enduml
